# OSProjects

./: README.md
MemoryManagement/: CMakeLists.txt  README.md  header.hpp  main.cpp  source.cpp
MemoryManagement/tests/: first.txt
ProcessProject/: CMakeLists.txt  OSProject.cpp  Process.cpp  Process.hpp  README.md
ProcessProject/tests/: commands.txt
